修改配置我呢间-未完